--- a/config.json
+++ b/config.json
@@ -12,7 +12,8 @@
             "american-emu": {
                 "name": "spyro2.bin",
                 "symbols": [
-                    "american.txt",
+                    "funcs-u.txt",
+                    "data-u.txt",
                     "ps1-header.txt"
                 ],
                 "build_id": 94425
@@ -22,7 +23,8 @@
             "american-ps1": {
                 "name": "spyro2.bin",
                 "symbols": [
-                    "american.txt",
+                    "funcs-u.txt",
+                    "data-u.txt",
                     "ps1-header.txt"
                 ],
                 "build_id": 94425
@@ -32,7 +34,8 @@
             "american-ps2": {
                 "name": "spyro2.bin",
                 "symbols": [
-                    "american.txt",
+                    "funcs-u.txt",
+                    "data-u.txt",
                     "ps2-header.txt"
                 ],
                 "build_id": 94425
