--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
                     "data-u.txt",
                     "funcs-u-rs2.txt",
                     "data-u-rs2.txt",
-                    "ps1-header.txt"
+                    "ps1.txt"
                 ],
                 "build_id": 94425
             }
@@ -29,7 +29,7 @@
                     "data-u.txt",
                     "funcs-u-rs2.txt",
                     "data-u-rs2.txt",
-                    "ps1-header.txt"
+                    "ps1.txt"
                 ],
                 "build_id": 94425
             }
@@ -42,7 +42,7 @@
                     "data-u.txt",
                     "funcs-u-rs2.txt",
                     "data-u-rs2.txt",
-                    "ps2-header.txt"
+                    "ps2.txt"
                 ],
                 "build_id": 94425
             }
