--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "mods/rs2/loader/third_party/nugget"]
-	path = mods/rs2/loader/third_party/nugget
+[submodule "nugget"]
+	path = mods/rs2/loader/thirdparty/nugget
+	url = https://github.com/pcsx-redux/nugget/
+[submodule "mods/rs2/loader/thirdparty/nugget"]
+	path = mods/rs2/loader/thirdparty/nugget
 	url = https://github.com/pcsx-redux/nugget/
