--- a/config.json
+++ b/config.json
@@ -5,7 +5,8 @@
         "optimization": 4,
         "debug": 0,
         "psyq": 0,
-        "8mb": 0
+        "8mb": 0,
+        "mininoob": 0
     },
     "versions": [
         {
